--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/console
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
+spring.jpa.generate-ddl=false
 logging.level.org.hibernate = debug
 
 
